List items = [
  {
    "header": "Create",
    "description":
        "We know it's dificult to set time aside to study, let us help you!",
    "descripcion":
        "Sabemos que es difícil hacerse el tiempo para estudiar, dejanos ayudarte!",
    "image": "assets/manage.png"
  },
  {
    "header": "Calendar",
    "description":
        "Study Planner will create the neccesary amount of study sessions and add them to your Calendar during the perfect times for you to study. Always working around your schedule!",
    "descripcion":
        "Study Planner creará la cantidad necesario de sesiones de estudio y las agregara a tu Calendario en las horas y días ideales para estudiar. Siempre teniendo en cuenta tus otros compromisos!",
    "image": "assets/time.png"
  },
  {
    "header": "Done!",
    "description":
        "Keep your Calendar up to date! You will be taken to the Settings Page now, Enjoy!",
    "descripcion":
        "Manten tu Calendario actualizado! Seras redireccionado a la página de inicio, Que Disfrutes!",
    "image": "assets/done.png"
  },
];
