{
  "tutorial": "Show Tutorial",
  "addTest": "Add Test",
  "goToCalendar": "Go To Calendar",
  "settings": "Settings",
  "goToCalendarTut": "This open your device's Calendar, where you can check or modify your created sessions and tests, also set reminders if you want",
  "addTestTut": "Add a new test, It will be added to your device's Calendar, along with the corresponding study sessions",
  "settingsTut": "Use your settings to define what Calendar we should use to write and read events, set you best times to study, cut offs and more",
  "settingsWarning": "Before we Start please select what Calendar we should use",
  "done": "DONE",
  "option": "description",
  "calendarToUse": "Calendar to use",
  "selectACalendar": "SELECT A CALENDAR",
  "sweetSpot": "Sweet spot",
  "cutOff": "Cut Off",
  "nightOwl": "Night Owl",
  "logOut": "Log Out",
  "calendars": "Calendars",
  "calendarsTut": "Select which calendar to use. \nStudy Planner will retrieve events from this calendar to check for availability,it will also write the tests and sessions created.",
  "sweetSpotTut": "Study Planner will always try to allocate sessions between these times first.",
  "cutOffTut": "These are the times you do not want to study, usually used for bed time.\nHint: \nYou can use the morning cut off to take your classes into account!\nExample: Your classes end every day around 4pm, set the morning cut off to 4pm.",
  "nightOwlTut": "If your sweet spot times are busy, Study Planner will try later that day if this option is selected. Otherwise it will try earlier that day.",
  "morning": "MORNING",
  "night": "NIGHT",
  "start": "START",
  "end": "END",
  "courseCode": "Course Code",
  "enterSubject": "Please enter subject",
  "description": "Description",
  "enterDescription": "Please enter description",
  "dueDate": "Due Date",
  "pickADate": " Pick a Date",
  "testComplexity": "Test Complexity",
  "whatIsThis": "What is this?",
  "testComplexityTut": "The more complex the test, the more sessions we will try to create.\nThe final amount of sessions will depend on how close the due date is, and how much time available you have on your calendar.\nIf there is enough time and availability the number of sessions will be equal to the complexity selected.\nExample: Complexity 10 / Number of sessions 10\nNote: Dificulty selector will only be visible if the test due date is more than 1 day from today\nMax number of Sessions are 30",
  "cancel": "Cancel",
  "noTimeForSessions": "The test is too soon,\nno session were created for this test",
  "oneSessionCreated": "Test And 1 new study session was added to your calendar",
  "moreSessionsCreated": "new study sessions were added to your calendar",
  "and": "and",
  "endDateError": "END must be after START",
  "goToTest": "Go To Test",
  "deleteTest": "Delete test",
  "dueToday": "Due Today!",
  "dueTomorrow": "Due Tomorrow!",
  "pastDue": "Past Due",
  "dueInDays": "Due in {daysToTest} days",
  "testRemoved": "test was removed from your calendar",
  "testAndOneSession": "test and 1 session was removed from your calendar",
  "testAndSessions": "test and {numSessionsDeleted} sessions were removed from your calendar",
  "deleteConfirm": "This will delete this test and all sessions associated with it from your calendar, are you sure?",
  "delete": "DELETE",
  "session": "Session",
  "recover": "Password Recovery",
  "enterEmail": "Enter an email",
  "emailEmpty": " Email Can't Be Empty",
  "recoverBig": "RECOVER",
  "emailSent": "Email Sent Correctly",
  "backLogin": "BACK TO LOGIN",
  "signUp": "SignUp",
  "login": "Login",
  "enterPassword": "Enter Password",
  "password": "PASSWORD",
  "passwordEmpty": "Password Can't Be Empty",
  "passNoMatch": "Password do not match",
  "repeatPass": "REPEAT PASSWORD",
  "forgot": "Forgot Your Password?",
  "createAccount": "CREATE ACCOUNT",
  "accessGoogle": "ACCESS WITH GOOGLE",
  "haveAccount": "ALREADY HAVE AN ACCOUNT",
  "studySession": "Study Session",
  "forWord": "for",
  "addingSessions": "Adding sessions to your device..."
}
