...
        )
      ]),
      body: Container(
        child: Stack(
          children: <Widget>[
            PageView.builder(
              key: ValueKey("pageview"),
              controller: _pageViewController,
              itemCount: slides.length,
              itemBuilder: (BuildContext context, int index) {
                _pageViewController.addListener(() async {
                  setState(() {
                    currentPage = _pageViewController.page;
...
